# servoControl

./: README.md  eee188_proj.m  motor_simulation.m  servoControl.ino
IMU_Feedback/: servoControl.ino
Visual_Feedback/: README.md  objectLocator.m
Visual_Feedback/arduino_visual_servo/: README.md  arduino_visual_servo.ino
Visual_Feedback/src/production/: CMakeLists.txt  package.xml
Visual_Feedback/src/production/launch/: visual_servoing.launch
Visual_Feedback/src/production/src/: objectLocator.cpp
